--- a/SAMPLETOY_ESP32_Arduino/src/CMakeLists.txt
+++ b/SAMPLETOY_ESP32_Arduino/src/CMakeLists.txt
@@ -3,4 +3,6 @@ project(src C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(src main.c)
+add_executable(src main.c
+        TestsSampletoy.cpp
+        TestsSampletoy.h)
