--- a/SAMPLETOY_ESP32_Arduino/src/CMakeLists.txt
+++ b/SAMPLETOY_ESP32_Arduino/src/CMakeLists.txt
@@ -5,4 +5,8 @@ set(CMAKE_C_STANDARD 23)
 
 add_executable(src main.c
         TestsSampletoy.cpp
-        TestsSampletoy.h)
+        TestsSampletoy.h
+        SampletoyUtility.c
+        SampletoyUtility.h
+        SampletoyIO.c
+        SampletoyIO.h)
